# Pixel-Adventure

./: 2025OOPL_Final.md  CMakeLists.txt
Resources/Songs/1905695 kessoku band - Ano Band (TV Size)/: kessoku band - Ano Band (TV Size) (Mahiru Shiina) [Floth's Normal Band].osu
Resources/Songs/1909824 kessoku band - Seiza ni Naretara/: kessoku band - Seiza ni Naretara (Amateurre) [Atinasia's Another].osu  kessoku band - Seiza ni Naretara (Amateurre) [Kyairie's Insane].osu  kessoku band - Seiza ni Naretara (Amateurre) [Matha's Expert].osu  kessoku band - Seiza ni Naretara (Amateurre) [litoluna's Wishful Expert].osu
Resources/Songs/2064958 MyGO!!!!! - Mayoiuta/: MyGO!!!!! - Mayoiuta (Gust) [Ag's Hard].osu  MyGO!!!!! - Mayoiuta (Gust) [It's MyGO!!!!!].osu  MyGO!!!!! - Mayoiuta (Gust) [Setu's Insane].osu  MyGO!!!!! - Mayoiuta (Gust) [Surou's Normal].osu
Resources/Songs/2066973 MyGO!!!!! - Silhouette Dance/: MyGO!!!!! - Silhouette Dance (kiddly) [Ag's Hard].osu  MyGO!!!!! - Silhouette Dance (kiddly) [Dance with shadow].osu  MyGO!!!!! - Silhouette Dance (kiddly) [Hatsune Miku's Normal].osu  MyGO!!!!! - Silhouette Dance (kiddly) [yf's Insane].osu
Resources/Songs/2070468 CRYCHIC - Haruhikage (TV Size)/: CRYCHIC - Haruhikage (TV Size) (lkx_Shore) [Gust's Insane].osu  CRYCHIC - Haruhikage (TV Size) (lkx_Shore) [Hard].osu  CRYCHIC - Haruhikage (TV Size) (lkx_Shore) [Normal].osu  CRYCHIC - Haruhikage (TV Size) (lkx_Shore) [Normal]1.osu  CRYCHIC - Haruhikage (TV Size) (lkx_Shore) [Sakitomori].osu
Resources/Songs/2084617 MyGO!!!!! - Utakotoba/: MyGO!!!!! - Utakotoba (Gust) [4j's Extra The poem I want to sing to you].osu  MyGO!!!!! - Utakotoba (Gust) [Ag's Hard].osu  MyGO!!!!! - Utakotoba (Gust) [Extra Let's stay together forever].osu  MyGO!!!!! - Utakotoba (Gust) [Misure's Insane].osu  MyGO!!!!! - Utakotoba (Gust) [Patchouli-R's Normal].osu  MyGO!!!!! - Utakotoba (Gust) [lkx_Shore's Insane].osu
Resources/Songs/2172979 TOGENASHI TOGEARI - VOID (TV Size)/: TOGENASHI TOGEARI - VOID (TV Size) (KeyWee) [Collab Insane].osu  TOGENASHI TOGEARI - VOID (TV Size) (KeyWee) [Confession].osu  TOGENASHI TOGEARI - VOID (TV Size) (KeyWee) [Hard].osu  (+2 more)
include/: App.hpp  AudioUtil.h  BackButton.h  Background.h  Catcher.h  Combo.h  ContinueButton.h  Finish.h  Fruit.h  HP.h  Level.h  LevelManager.h  MainMenu.h  Music.h  Number.h  OsuParser.h  ResultFloat.h  ResultInteger.h  RetryButton.h  Scoreboard.h  Scorenumber.h  SelectLevel.h
include/Button/: BackButton.h  Button.h  ExitButton.h  LevelButton.h  PlayButton.h  RetryButton.h
src/: App.cpp  Background.cpp  Button.cpp  Catcher.cpp  Combo.cpp  Finish.cpp  Fruit.cpp  HP.cpp  Level.cpp  LevelButton.cpp  LevelManager.cpp  MainMenu.cpp  Music.cpp  Number.cpp  OsuParser.cpp  ResultFloat.cpp  ResultInteger.cpp  Scoreboard.cpp  Scorenumber.cpp  SelectLevel.cpp  main.cpp
(+34 files in other folders)
